Fixed overlapping css and filename change

--- a/css/novatasks.css
+++ b/css/novatasks.css
@@ -319,7 +319,7 @@ hr {
     margin-bottom: 1em;
 }
 
-.tracks {
+.article-tracks {
     margin: 0;
     margin-bottom: 1em;
     font-size: .65rem;
